--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 /* Variáveis */
 :root {
-    --primary-color: #026773;
-    --secondary-color: #3CA6A6;
+    --primary-color: #16b9ab;
+    --secondary-color: #3dc528;
     --text-color: #F2E3D5;
     --background-color: #204A4F;
     --button-hover: #012E40;
