--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --primary-color: #16b9ab;
     --secondary-color: #3dc528;
     --text-color: #F2E3D5;
-    --background-color: #204A4F;
+    --background-color: #16b9ab;
     --button-hover: #012E40;
     --font-body: "Chocolate Classical Sans", serif;
     --font-titulo: "Rakkas", serif;
