--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /* Variáveis */
 :root {
     --primary-color: #16b9ab;
-    --secondary-color: #3dc528;
+    --secondary-color: #28c571;
     --text-color: #F2E3D5;
     --background-color: #16b9ab;
     --button-hover: #012E40;
